examples/bad/call-variable.elina
var x: int = 10;

fn main(): void {
  x();
}